Added creation of a true UUID to the Attribute Query Handle, updated tests and HS appropriately
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@5 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/.classpath
+++ b/.classpath
@@ -11,8 +11,7 @@
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-digester.jar"/>
     <classpathentry kind="lib"
         path="webApplication/WEB-INF/lib/jce-bc.jar" sourcepath="/ShibTest/buildlibs/jce-bc-src.jar"/>
-    <classpathentry kind="lib" path="buildlibs/junit.jar" sourcepath="/ShibTest/buildlibs/junit-src.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/jug.jar"
-        rootpath="" sourcepath="/ShibTest/buildlibs/jug-src.jar"/>
+    <classpathentry kind="lib" path="buildlibs/junit.jar" rootpath="" sourcepath="/shib-java/buildlibs/junit-src.jar"/>
+    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/jug.jar" sourcepath="/shib-java/webApplication/WEB-INF/lib/jug-src.jar"/>
     <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
 </classpath>
