--- a/webApplication/WEB-INF/web.xml
+++ b/webApplication/WEB-INF/web.xml
@@ -5,19 +5,42 @@
     "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
 
 <web-app>
-    <servlet>
-      <servlet-name>
+	<servlet>
+		<servlet-name>
           HS
-      </servlet-name>
-      <servlet-class>
+		</servlet-name>
+		<servlet-class>
           edu.internet2.middleware.shibboleth.hs.HandleService
-      </servlet-class>
-      </servlet>
+		</servlet-class>
+	</servlet>
+	<servlet>
+			<servlet-name>WAYFTester</servlet-name>
+			<display-name>WAYF Tester</display-name>
+			<servlet-class>edu.internet2.middleware.shibboleth.wayf.WayfTester</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>WAYF</servlet-name>
+		<display-name>WAYF</display-name>
+		<servlet-class>edu.internet2.middleware.shibboleth.wayf.WayfHandler</servlet-class>
+		<init-param>
+			<param-name>WAYFConfigFileLocation</param-name>
+			<param-value>/WEB-INF/conf/shibboleth.xml</param-value>
+		</init-param>
+	</servlet>
       
      <servlet-mapping>
 		<servlet-name>HS</servlet-name>
 		<url-pattern>/HS</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>WAYFTester</servlet-name>
+		<url-pattern>Test</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>WAYF</servlet-name>
+		<url-pattern>WAYF</url-pattern>
+	</servlet-mapping>
+	
 	<mime-mapping>
 		<extension>css</extension>
 		<mime-type>text/css</mime-type>
