Changed the name of the WAYF servlet (for clarity). Converted logging in the WAYF to Log4J.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@10 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/web.xml
+++ b/webApplication/WEB-INF/web.xml
@@ -21,7 +21,7 @@
 	<servlet>
 		<servlet-name>WAYF</servlet-name>
 		<display-name>WAYF</display-name>
-		<servlet-class>edu.internet2.middleware.shibboleth.wayf.WayfHandler</servlet-class>
+		<servlet-class>edu.internet2.middleware.shibboleth.wayf.WayfService</servlet-class>
 		<init-param>
 			<param-name>WAYFConfigFileLocation</param-name>
 			<param-value>/WEB-INF/conf/shibboleth.xml</param-value>
