--- a/.classpath
+++ b/.classpath
@@ -8,12 +8,14 @@
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-beanutils.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-collections.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-digester.jar"/>
-    <classpathentry kind="lib"
-        path="webApplication/WEB-INF/lib/jce-bc.jar" sourcepath="/ShibTest/buildlibs/jce-bc-src.jar"/>
     <classpathentry kind="lib" path="buildlibs/junit.jar" sourcepath="/shib-java/buildlibs/junit-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/jug.jar" sourcepath="/shib-java/webApplication/WEB-INF/lib/jug-src.jar"/>
     <classpathentry kind="lib" path="buildlibs/xercesImpl.jar" sourcepath="/shib-java/buildlibs/xerces-src.jar"/>
-    <classpathentry kind="lib" path="buildlibs/xmlParserAPIs.jar"
-        rootpath="" sourcepath="/shib-java/buildlibs/xerces-src.jar"/>
+    <classpathentry kind="lib" path="buildlibs/xmlParserAPIs.jar" sourcepath="/shib-java/buildlibs/xerces-src.jar"/>
+    <classpathentry kind="lib" path="buildlibs/xalan.jar"/>
+    <classpathentry kind="lib" path="buildlibs/xml-apis.jar"/>
+    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/bc-jce-jdk13-112.jar"/>
+    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/struts.jar"/>
+    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlsec.jar"/>
     <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
 </classpath>
