Updated OpenSAML library. Moved around some common components. Converted HS to use the new OpenSAML. (with useless random response key)
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@37 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
     <classpathentry kind="var" path="JRE_LIB" rootpath="JRE_SRCROOT" sourcepath="JRE_SRC"/>
     <classpathentry kind="src" path="source"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/shibboleth.jar"/>
     <classpathentry kind="lib" path="buildlibs/servlet.jar" sourcepath="/shib-java/buildlibs/servlet-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/log4j-1.2.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-beanutils.jar"/>
@@ -14,8 +13,11 @@
     <classpathentry kind="lib" path="buildlibs/xmlParserAPIs.jar" sourcepath="/shib-java/buildlibs/xerces-src.jar"/>
     <classpathentry kind="lib" path="buildlibs/xalan.jar"/>
     <classpathentry kind="lib" path="buildlibs/xml-apis.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/bc-jce-jdk13-112.jar"/>
+    <classpathentry kind="lib"
+        path="webApplication/WEB-INF/lib/bc-jce-jdk13-112.jar"
+        rootpath="" sourcepath="/Shibboleth/buildlibs/jce-bc-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/struts.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlsec.jar"/>
+    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/opensaml.jar"/>
     <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
 </classpath>
