Modified build configuration to exclude local AA files.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@44 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
 
 	<!-- Compile classes and move them to ${build} -->
 	<target name="compile-all" depends="init">
-		<javac srcdir="${src}" destdir="${build}" includes="**/*.java" debug="on">
+		<javac srcdir="${src}" destdir="${build}" includes="**/*.java" excludes="edu/internet2/middleware/shibboleth/aaLocal/**" debug="on">
 			<classpath refid="build.path" />
 		</javac>
 		<copy todir="${build}/schemas">
