Added pre-checking target to build configuration.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@68 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,10 @@
 	</target>
 
 
+	<!-- This target should be run before checking code into the repository -->
+	<target name="pre-checkin" depends="compile-all, test-all, clean-all" />
+
+
 	<!-- Compile classes and move them to ${build} -->
 	<target name="compile-all" depends="init">
 		<javac srcdir="${src}" destdir="${build}" includes="**/*.java" debug="on">
