--- a/.classpath
+++ b/.classpath
@@ -13,10 +13,10 @@
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlsec.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/opensaml.jar"/>
     <classpathentry kind="lib" path="lib/junit.jar"/>
-    <classpathentry kind="lib" path="lib/servlet.jar"/>
     <classpathentry kind="lib" path="lib/xalan.jar"/>
     <classpathentry kind="lib" path="lib/xercesImpl.jar"/>
     <classpathentry kind="lib" path="lib/xml-apis.jar"/>
     <classpathentry kind="lib" path="lib/xmlParserAPIs.jar"/>
+    <classpathentry kind="lib" path="lib/servlet-2.2.jar" rootpath="" sourcepath="/Shibboleth/lib/servlet-src.jar"/>
     <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
 </classpath>
