--- a/.classpath
+++ b/.classpath
@@ -12,11 +12,11 @@
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlsec.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/opensaml.jar"/>
     <classpathentry kind="lib" path="lib/junit.jar"/>
-    <classpathentry kind="lib" path="lib/xalan.jar"/>
-    <classpathentry kind="lib" path="lib/xercesImpl.jar"/>
-    <classpathentry kind="lib" path="lib/xml-apis.jar"/>
-    <classpathentry kind="lib" path="lib/xmlParserAPIs.jar"/>
     <classpathentry kind="lib" path="lib/servlet-2.2.jar" sourcepath="/Shibboleth/lib/servlet-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/log4j-1.2.3.jar"/>
+    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xalan.jar"/>
+    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xercesImpl.jar"/>
+    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xml-apis.jar"/>
+    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlParserAPIs.jar"/>
     <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
 </classpath>
