--- a/webApplication/WEB-INF/web.xml
+++ b/webApplication/WEB-INF/web.xml
@@ -6,25 +6,104 @@
 
 <web-app>
 	<servlet>
-		<servlet-name>
-          HS
-		</servlet-name>
-		<servlet-class>
-          edu.internet2.middleware.shibboleth.hs.HandleService
-		</servlet-class>
-	</servlet>
-	<servlet>
-			<servlet-name>WAYFTester</servlet-name>
-			<display-name>WAYF Tester</display-name>
-			<servlet-class>edu.internet2.middleware.shibboleth.wayf.WayfTester</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>WAYF</servlet-name>
-		<display-name>WAYF</display-name>
-		<servlet-class>edu.internet2.middleware.shibboleth.wayf.WayfService</servlet-class>
+		<servlet-name>Logging Service</servlet-name>
+		<servlet-class>edu.internet2.middleware.shibboleth.log.LogServ</servlet-class>
 		<init-param>
-			<param-name>WAYFConfigFileLocation</param-name>
-			<param-value>/WEB-INF/conf/shibboleth.xml</param-value>
+			<param-name>log4jConfigFileLocation</param-name>
+			<param-value>/WEB-INF/conf/log4j.properties</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet>
+		<servlet-name>HS</servlet-name>
+		<display-name>Shibboleth Handle Service</display-name>
+		<servlet-class>edu.internet2.middleware.shibboleth.hs.HandleServlet</servlet-class>
+		<init-param>
+			<param-name>domain</param-name>
+			<param-value>demo.edu</param-value>
+		</init-param>
+		<init-param>
+		        <param-name>HSname</param-name>
+			<param-value>shib2.internet2.edu</param-value>
+		</init-param>
+		<init-param>
+		        <param-name>ticket</param-name>
+			<param-value>1400000</param-value>
+		</init-param>
+		<init-param>
+		          <param-name>AAurl</param-name>
+		          <param-value>https://shib2.internet2.edu/shibboleth-origin/servlet/AA</param-value>
+		</init-param>
+		<init-param>
+			<param-name>DBdriver</param-name>
+			<param-value>org.gjt.mm.mysql.Driver</param-value>
+		</init-param>
+		<init-param>
+			<param-name>DBuser</param-name>
+			<param-value>shib</param-value>
+		</init-param>
+		<init-param>
+			<param-name>DBpass</param-name>
+			<param-value>shib</param-value>
+		</init-param>
+		<init-param>
+			<param-name>DBdomain</param-name>
+			<param-value>shib2.internet2.edu</param-value>
+		</init-param>
+		<init-param>
+			<param-name>KSpath</param-name>
+			<param-value>/WEB-INF/conf/keystore.jks</param-value>
+		</init-param>
+		<init-param>
+			<param-name>KSpass</param-name>
+			<param-value>shibhs</param-value>
+		</init-param>
+		<init-param>
+			<param-name>KSkeyalias</param-name>
+			<param-value>shibhs</param-value>
+		</init-param>
+		<init-param>
+			<param-name>KSkeypass</param-name>
+			<param-value>shibhs</param-value>
+		</init-param>
+		<init-param>
+			<param-name>certalias</param-name>
+			<param-value>shibhs</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
+		<servlet-name>AA</servlet-name>
+		<display-name>Shibboleth Attribute Authority</display-name>
+		<servlet-class>edu.internet2.middleware.shibboleth.aa.AAServlet</servlet-class>
+		
+		<init-param>
+		    <param-name>domain</param-name>
+		    <param-value>shib2.internet2.edu</param-value>
+		</init-param>
+
+		<init-param>
+		    <param-name>dirUrl</param-name>
+		    <param-value>ldap://shib2.internet2.edu/ou=People,dc=internet2,dc=edu</param-value>
+		</init-param>
+
+		<init-param>
+		    <param-name>ldapUserDnPhrase</param-name>
+		    <param-value>uid=</param-value>
+		</init-param>
+
+		<init-param>
+		    <param-name>ctxFactoryClass</param-name>
+		    <param-value>edu.internet2.middleware.shibboleth.aaLocal.EchoCtxFactory</param-value>
+		</init-param>
+
+		<init-param>
+		    <param-name>arpFactoryMethod</param-name>
+		    <param-value>file</param-value>
+		</init-param>
+
+		<init-param>
+		    <param-name>arpFactoryData</param-name>
+		    <param-value>/tmp/shib2/</param-value>
 		</init-param>
 	</servlet>
       
@@ -33,32 +112,12 @@
 		<url-pattern>/HS</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
-		<servlet-name>WAYFTester</servlet-name>
-		<url-pattern>Test</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>WAYF</servlet-name>
-		<url-pattern>WAYF</url-pattern>
+		<servlet-name>AA</servlet-name>
+		<url-pattern>/AA</url-pattern>
 	</servlet-mapping>
 	
 	<mime-mapping>
 		<extension>css</extension>
 		<mime-type>text/css</mime-type>
 	</mime-mapping>
-
-	<security-constraint>
-		<web-resource-collection>
-			<web-resource-name>HS Login Test</web-resource-name>
-			<url-pattern>/HS</url-pattern>
-		</web-resource-collection>
-	<auth-constraint>
-			<role-name>tomcat</role-name>
-		</auth-constraint>
-	</security-constraint>
-
-	<login-config>
-		<auth-method>BASIC</auth-method>
-		<realm-name>HS Login Test</realm-name>
-	</login-config>
-
 </web-app>
