Updated log4j config to ignore xmlsec messages.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@113 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/conf/log4j.properties
+++ b/webApplication/WEB-INF/conf/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootCategory=WARN, dest1
-log4j.logger.org.apache.xml.security=FATAL
+log4j.logger.org.apache.xml.security=OFF
 
 log4j.appender.dest1=org.apache.log4j.ConsoleAppender
 log4j.appender.dest1.layout=org.apache.log4j.PatternLayout
