--- a/webApplication/WEB-INF/web.xml
+++ b/webApplication/WEB-INF/web.xml
@@ -106,7 +106,25 @@
 		    <param-value>/tmp/shib2/</param-value>
 		</init-param>
 	</servlet>
-      
+	<servlet>
+		<servlet-name>WAYF</servlet-name>
+		<display-name>Shibboleth WAYF Service</display-name>
+		<servlet-class>edu.internet2.middleware.shibboleth.wayf.WayfService</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>WAYFTester</servlet-name>
+		<display-name>Simple servlet for testing WAYF functionality</display-name>
+		<servlet-class>edu.internet2.middleware.shibboleth.wayf.WayfTester</servlet-class>
+	</servlet>
+	
+     <servlet-mapping>
+		<servlet-name>WAYF</servlet-name>
+		<url-pattern>/WAYF</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>WAYFTester</servlet-name>
+		<url-pattern>/WAYFTester</url-pattern>
+	</servlet-mapping>  
      <servlet-mapping>
 		<servlet-name>HS</servlet-name>
 		<url-pattern>/HS</url-pattern>
