--- a/.classpath
+++ b/.classpath
@@ -16,7 +16,8 @@
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/log4j-1.2.3.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xalan.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xercesImpl.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xml-apis.jar"/>
+    <classpathentry kind="lib"
+        path="webApplication/WEB-INF/lib/xml-apis.jar" rootpath="" sourcepath="/Shibboleth/lib/xerces-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlParserAPIs.jar"/>
     <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
 </classpath>
