--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,8 @@
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-beanutils.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-collections.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-digester.jar"/>
+    <classpathentry kind="lib"
+        path="webApplication/WEB-INF/lib/commons-digester.jar" sourcepath="/Shibboleth/lib/commons-digester-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/jug.jar" sourcepath="/shib-java/webApplication/WEB-INF/lib/jug-src.jar"/>
     <classpathentry kind="lib"
         path="webApplication/WEB-INF/lib/bc-jce-jdk13-112.jar" sourcepath="/Shibboleth/buildlibs/jce-bc-src.jar"/>
@@ -15,7 +16,8 @@
     <classpathentry kind="lib" path="lib/servlet-2.2.jar" sourcepath="/Shibboleth/lib/servlet-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/log4j-1.2.3.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xalan.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xercesImpl.jar"/>
+    <classpathentry kind="lib"
+        path="webApplication/WEB-INF/lib/xercesImpl.jar" sourcepath="/Shibboleth/lib/xerces-src.jar"/>
     <classpathentry kind="lib"
         path="webApplication/WEB-INF/lib/xml-apis.jar" rootpath="" sourcepath="/Shibboleth/lib/xerces-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlParserAPIs.jar"/>
