Synched deployment descriptors.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@162 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/web.xml
+++ b/webApplication/WEB-INF/web.xml
@@ -31,6 +31,10 @@
 			<param-value>1400000</param-value>
 		</init-param>
 		<init-param>
+		        <param-name>repository</param-name>
+			<param-value>MEMORY</param-value>
+		</init-param>
+		<init-param>
 		          <param-name>AAurl</param-name>
 		          <param-value>https://shib2.internet2.edu/shibboleth-origin/servlet/AA</param-value>
 		</init-param>
@@ -116,6 +120,47 @@
 		<display-name>Simple servlet for testing WAYF functionality</display-name>
 		<servlet-class>edu.internet2.middleware.shibboleth.wayf.WayfTester</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>SHIRE</servlet-name>
+		<display-name>Shibboleth SHIRE Component</display-name>
+		<servlet-class>edu.internet2.middleware.shibboleth.shire.ShireServlet</servlet-class>
+	<init-param>
+		<param-name>cookie-name</param-name>
+		<param-value>shib_shib1</param-value>
+	</init-param>
+	<init-param>
+		<param-name>session-dir</param-name>
+		<param-value>/tmp/shiresessions</param-value>
+	</init-param>
+	<init-param>
+		<param-name>ssl-only</param-name>
+		<param-value>true</param-value>
+	</init-param>
+	<init-param>
+		<param-name>check-address</param-name>
+		<param-value>true</param-value>
+	</init-param>
+	<init-param>
+		<param-name>verbose</param-name>
+		<param-value>true</param-value>
+	</init-param>
+	<init-param>
+		<param-name>keystore-path</param-name>
+		<param-value>/WEB-INF/conf/roots.jks</param-value>
+	</init-param>
+	<init-param>
+		<param-name>keystore-alias</param-name>
+		<param-value>internet2</param-value>
+	</init-param>
+	<init-param>
+		<param-name>keystore-password</param-name>
+		<param-value>shibboleth</param-value>
+	</init-param>
+	<init-param>
+		<param-name>registry-uri</param-name>
+		<param-value>http://newman.uts.ohio-state.edu/shibsites.xml</param-value>
+	</init-param>
+	</servlet>
 	
      <servlet-mapping>
 		<servlet-name>WAYF</servlet-name>
@@ -132,6 +177,10 @@
 	<servlet-mapping>
 		<servlet-name>AA</servlet-name>
 		<url-pattern>/AA</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SHIRE</servlet-name>
+		<url-pattern>/SHIRE</url-pattern>
 	</servlet-mapping>
 	
 	<mime-mapping>
