--- a/webApplication/WEB-INF/conf/log4j.properties
+++ b/webApplication/WEB-INF/conf/log4j.properties
@@ -1,8 +1,20 @@
-log4j.rootCategory=WARN, dest1
+log4j.rootCategory=DEBUG, dest1, dest2
 log4j.logger.org.apache.xml.security=OFF
 
 log4j.appender.dest1=org.apache.log4j.ConsoleAppender
 log4j.appender.dest1.layout=org.apache.log4j.PatternLayout
 log4j.appender.dest1.layout.ConversionPattern=%5p [%t] (%c:%L) - %m%n
 
-#log4j.debug=TRUE
+log4j.appender.dest2=org.apache.log4j.RollingFileAppender
+log4j.appender.dest2.File=/var/log/shib.log
+
+log4j.appender.dest2.MaxFileSize=100KB
+# Keep one backup file
+log4j.appender.dest2.MaxBackupIndex=1
+
+log4j.appender.dest2.layout=org.apache.log4j.PatternLayout
+log4j.appender.dest2.layout.ConversionPattern=%p %t %c - %m%n
+
+
+log4j.debug=TRUE
+
