--- a/webApplication/WEB-INF/conf/log4j.properties
+++ b/webApplication/WEB-INF/conf/log4j.properties
@@ -1,20 +1,23 @@
-log4j.rootCategory=DEBUG, dest1, dest2
+# Default Log4J configuration.  Sends logging output to STDOUT.
+
+log4j.rootCategory=WARN, stdout
 log4j.logger.org.apache.xml.security=OFF
 
-log4j.appender.dest1=org.apache.log4j.ConsoleAppender
-log4j.appender.dest1.layout=org.apache.log4j.PatternLayout
-log4j.appender.dest1.layout.ConversionPattern=%5p [%t] (%c:%L) - %m%n
-
-log4j.appender.dest2=org.apache.log4j.RollingFileAppender
-log4j.appender.dest2.File=/var/log/shib.log
-
-log4j.appender.dest2.MaxFileSize=100KB
-# Keep one backup file
-log4j.appender.dest2.MaxBackupIndex=1
-
-log4j.appender.dest2.layout=org.apache.log4j.PatternLayout
-log4j.appender.dest2.layout.ConversionPattern=%p %t %c - %m%n
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%c:%L) - %m%n
 
 
-log4j.debug=TRUE
+# Uncomment the following line to enable verbose debugging output concerning log4j initialization.
+#log4j.debug=TRUE
 
+
+# The following block represents an example of how to direct logging output to a file.
+#log4j.rootCategory=DEBUG, file
+#log4j.logger.org.apache.xml.security=OFF
+#log4j.appender.file=org.apache.log4j.RollingFileAppender
+#log4j.appender.file.File=/var/log/shib.log
+#log4j.appender.file.MaxFileSize=100KB
+#log4j.appender.file.MaxBackupIndex=1
+#log4j.appender.file.layout=org.apache.log4j.PatternLayout
+#log4j.appender.file.layout.ConversionPattern=%5p [%t] (%c:%L) - %m%n
