--- a/webApplication/WEB-INF/web.xml
+++ b/webApplication/WEB-INF/web.xml
@@ -5,6 +5,27 @@
     "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
 
 <web-app>
+	<context-param>
+		<param-name>DBdriver</param-name>
+		<param-value>org.gjt.mm.mysql.Driver</param-value>
+	</context-param>
+	<context-param>
+		<param-name>DBuser</param-name>
+		<param-value>shib</param-value>
+	</context-param>
+	<context-param>
+		<param-name>DBpass</param-name>
+		<param-value>shib</param-value>
+	</context-param>
+	<context-param>
+		<param-name>DBdomain</param-name>
+		<param-value>shib2.internet2.edu</param-value>
+	</context-param>
+	<context-param>
+	        <param-name>repository</param-name>
+		<param-value>MEMORY</param-value>
+	</context-param>
+	
 	<servlet>
 		<servlet-name>Logging Service</servlet-name>
 		<servlet-class>edu.internet2.middleware.shibboleth.log.LogServ</servlet-class>
@@ -31,28 +52,8 @@
 			<param-value>1400000</param-value>
 		</init-param>
 		<init-param>
-		        <param-name>repository</param-name>
-			<param-value>MEMORY</param-value>
-		</init-param>
-		<init-param>
 		          <param-name>AAurl</param-name>
 		          <param-value>https://shib2.internet2.edu/shibboleth-origin/servlet/AA</param-value>
-		</init-param>
-		<init-param>
-			<param-name>DBdriver</param-name>
-			<param-value>org.gjt.mm.mysql.Driver</param-value>
-		</init-param>
-		<init-param>
-			<param-name>DBuser</param-name>
-			<param-value>shib</param-value>
-		</init-param>
-		<init-param>
-			<param-name>DBpass</param-name>
-			<param-value>shib</param-value>
-		</init-param>
-		<init-param>
-			<param-name>DBdomain</param-name>
-			<param-value>shib2.internet2.edu</param-value>
 		</init-param>
 		<init-param>
 			<param-name>KSpath</param-name>
@@ -104,7 +105,6 @@
 		    <param-name>arpFactoryMethod</param-name>
 		    <param-value>file</param-value>
 		</init-param>
-
 	</servlet>
 	<servlet>
 		<servlet-name>WAYF</servlet-name>
