Changed default HS domain to example.edu
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@232 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/web.xml
+++ b/webApplication/WEB-INF/web.xml
@@ -41,7 +41,7 @@
 		<servlet-class>edu.internet2.middleware.shibboleth.hs.HandleServlet</servlet-class>
 		<init-param>
 			<param-name>domain</param-name>
-			<param-value>demo.edu</param-value>
+			<param-value>example.edu</param-value>
 		</init-param>
 		<init-param>
 		        <param-name>HSname</param-name>
