--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,8 @@
         path="webApplication/WEB-INF/lib/commons-digester.jar" sourcepath="/Shibboleth/lib/commons-digester-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/jug.jar" sourcepath="/shib-java/webApplication/WEB-INF/lib/jug-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/struts.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xmlsec.jar"/>
+    <classpathentry kind="lib"
+        path="webApplication/WEB-INF/lib/xmlsec.jar" rootpath="" sourcepath="/Shibboleth/lib/xml-sec-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/opensaml.jar"/>
     <classpathentry kind="lib" path="lib/junit.jar"/>
     <classpathentry kind="lib" path="lib/servlet-2.2.jar" sourcepath="/Shibboleth/lib/servlet-src.jar"/>
@@ -19,6 +20,7 @@
         path="webApplication/WEB-INF/lib/xml-apis.jar" sourcepath="/Shibboleth/lib/xerces-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/bc-jce-jdk13-114.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/ldap.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/log4j-1.2.5.jar"/>
+    <classpathentry kind="lib"
+        path="webApplication/WEB-INF/lib/log4j-1.2.5.jar" sourcepath="/Shibboleth/lib/log4j-1.2.5-src.jar"/>
     <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
 </classpath>
