Added username variable to HS config
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@264 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/web.xml
+++ b/webApplication/WEB-INF/web.xml
@@ -75,6 +75,10 @@
 			<param-name>certalias</param-name>
 			<param-value>shibhs</param-value>
 		</init-param>
+                <init-param>
+                        <param-name>username</param-name>
+                        <param-value>REMOTE_USER</param-value>
+                </init-param>
 	</servlet>
 	<servlet>
 		<servlet-name>AA</servlet-name>
@@ -100,7 +104,6 @@
 		    <param-name>ctxFactoryClass</param-name>
 		    <param-value>edu.internet2.middleware.shibboleth.aaLocal.EchoCtxFactory</param-value>
 		</init-param>
-
 		<init-param>
 		    <param-name>arpFactoryMethod</param-name>
 		    <param-value>file</param-value>
