Changed arp repository factory so that classes can be plugged in from runtime config. (submitted by Parviz Dousti)
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@299 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/WEB-INF/web.xml
+++ b/webApplication/WEB-INF/web.xml
@@ -106,7 +106,7 @@
 		</init-param>
 		<init-param>
 		    <param-name>arpFactoryMethod</param-name>
-		    <param-value>file</param-value>
+		    <param-value>edu.internet2.middleware.shibboleth.aa.ArpFileFactory</param-value>
 		</init-param>
 	</servlet>
 	<servlet>
