--- a/webApplication/WEB-INF/conf/log4j.properties
+++ b/webApplication/WEB-INF/conf/log4j.properties
@@ -4,7 +4,7 @@ log4j.rootCategory=WARN, stdout
 log4j.logger.org.apache.xml.security=OFF
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%c:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%-5p %-36X{serviceId} %d{ISO8601} (%c:%L) - %m%n
 
 
 # Uncomment the following line to enable verbose debugging output concerning log4j initialization.
