Renamed origin build to shibboleth.war (consistent with docs).
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@361 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -77,7 +77,7 @@
 
     <target name="dist-origin" depends="compile-all, test-origin, package-origin, clean-build" />
     <target name="package-origin">
-        <war warfile="${dist}/${distname}-origin.war" webxml="${configroot}/origin.xml" basedir="${approot}" update="no" />
+        <war warfile="${dist}/${distname}.war" webxml="${configroot}/origin.xml" basedir="${approot}" update="no" />
     </target>
 
     <!-- Build utilities -->
