--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="var" path="JRE_LIB" rootpath="JRE_SRCROOT" sourcepath="JRE_SRC"/>
     <classpathentry kind="src" path="src"/>
+    <classpathentry kind="lib"
+        path="webApplication/WEB-INF/lib/xml-apis.jar" sourcepath="/Shibboleth/lib/xerces-src.jar"/>
+    <classpathentry kind="lib"
+        path="webApplication/WEB-INF/lib/xercesImpl.jar" sourcepath="/Shibboleth/lib/xerces-src.jar"/>
+    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xalan.jar"/>
+    <classpathentry kind="var" path="JRE_LIB" rootpath="JRE_SRCROOT" sourcepath="JRE_SRC"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-beanutils.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-collections.jar"/>
     <classpathentry kind="lib"
@@ -9,18 +14,13 @@
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/jug.jar" sourcepath="/shib-java/webApplication/WEB-INF/lib/jug-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/struts.jar"/>
     <classpathentry kind="lib"
-        path="webApplication/WEB-INF/lib/xmlsec.jar" rootpath="" sourcepath="/Shibboleth/lib/xml-sec-src.jar"/>
+        path="webApplication/WEB-INF/lib/xmlsec.jar" sourcepath="/Shibboleth/lib/xml-sec-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/opensaml.jar"/>
-    <classpathentry kind="lib" path="lib/junit.jar"/>
     <classpathentry kind="lib" path="lib/servlet-2.2.jar" sourcepath="/Shibboleth/lib/servlet-src.jar"/>
-    <classpathentry kind="lib" path="webApplication/WEB-INF/lib/xalan.jar"/>
-    <classpathentry kind="lib"
-        path="webApplication/WEB-INF/lib/xercesImpl.jar" sourcepath="/Shibboleth/lib/xerces-src.jar"/>
-    <classpathentry kind="lib"
-        path="webApplication/WEB-INF/lib/xml-apis.jar" sourcepath="/Shibboleth/lib/xerces-src.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/bc-jce-jdk13-114.jar"/>
     <classpathentry kind="lib" path="webApplication/WEB-INF/lib/ldap.jar"/>
     <classpathentry kind="lib"
         path="webApplication/WEB-INF/lib/log4j-1.2.5.jar" sourcepath="/Shibboleth/lib/log4j-1.2.5-src.jar"/>
+    <classpathentry kind="lib" path="lib/junit-3.8.1.jar" rootpath="" sourcepath="/Shibboleth/lib/junit-3.8.1-src.jar"/>
     <classpathentry kind="output" path="webApplication\WEB-INF\classes"/>
 </classpath>
